--- a/packages/esfx/package.json
+++ b/packages/esfx/package.json
@@ -10,5 +10,6 @@
     },
     "bugs": {
         "url": "https://github.com/esfx/esfx/issues"
-    }
+    },
+    "gitHead": "404382c3b617933f0d087fd7d64481860c46f60b"
 }
