--- a/packages/decorators-stage1-core/package.json
+++ b/packages/decorators-stage1-core/package.json
@@ -16,5 +16,9 @@
     "dependencies": {
         "@esfx/internal-guards": "^1.0.0-pre.0",
         "@esfx/type-model": "^1.0.0-pre.0"
-    }
+    },
+    "publishConfig": {
+        "access": "public"
+    },
+    "gitHead": "404382c3b617933f0d087fd7d64481860c46f60b"
 }
