--- a/packages/equatable-shim/package.json
+++ b/packages/equatable-shim/package.json
@@ -16,5 +16,9 @@
     "dependencies": {
         "@esfx/equatable": "^1.0.0-pre.0",
         "@esfx/internal-hashcode": "^1.0.0-pre.0"
-    }
+    },
+    "publishConfig": {
+        "access": "public"
+    },
+    "gitHead": "404382c3b617933f0d087fd7d64481860c46f60b"
 }
