--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "esfx",
   "private": true,
   "repository": {
-      "type": "git",
-      "url": "https://github.com/esfx/esfx.git"
+    "type": "git",
+    "url": "https://github.com/esfx/esfx.git"
   },
   "bugs": {
-      "url": "https://github.com/esfx/esfx/issues"
+    "url": "https://github.com/esfx/esfx/issues"
+  },
+  "scripts": {
+    "prepublish": "node scripts/prepublish.js",
+    "lerna-publish": "node scripts/publish.js"
   },
   "devDependencies": {
     "@types/jest": "^23.3.11",
@@ -20,6 +23,8 @@
     "lerna": "^3.13.4",
     "prex": "^0.4.5",
     "ts-jest": "^23.10.5",
-    "typescript": "^3.4.5"
+    "typescript": "^3.4.5",
+    "yargs": "^13.2.2",
+    "yargs-unparser": "^1.5.0"
   }
 }
