Added DOM shim for collection-core

--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -9,6 +9,7 @@
         { "path": "./cancelable-dom-shim" },
         { "path": "./collection-core" },
         { "path": "./collection-core-shim" },
+        { "path": "./collection-core-dom-shim" },
         { "path": "./collections" },
         { "path": "./decorators-stage1-core" },
         { "path": "./decorators" },
