Move 'internal-*' packages to 'internal' folder

--- a/internal/binarysearch/tsconfig.json
+++ b/internal/binarysearch/tsconfig.json
@@ -6,6 +6,6 @@
     },
     "include": ["src/**/*.ts"],
     "references": [
-        { "path": "../equatable" },
+        { "path": "../../packages/equatable" },
     ]
 }
