--- a/packages/equatable/tsconfig.json
+++ b/packages/equatable/tsconfig.json
@@ -6,6 +6,6 @@
     },
     "include": ["src/**/*.ts"],
     "references": [
-        { "path": "../internal-hashcode" },
+        { "path": "../../internal/hashcode" },
     ]
 }
