--- a/packages/reflect-metadata-compat/tsconfig.json
+++ b/packages/reflect-metadata-compat/tsconfig.json
@@ -6,7 +6,7 @@
     },
     "include": ["src/**/*.ts"],
     "references": [
-        { "path": "../internal-guards" },
+        { "path": "../../internal/guards" },
         { "path": "../metadata" },
         { "path": "../metadata-shim" },
     ]
