--- a/internal/hashcode/tsconfig.json
+++ b/internal/hashcode/tsconfig.json
@@ -6,6 +6,6 @@
     },
     "include": ["src/**/*.ts"],
     "references": [
-        { "path": "../internal-murmur3" },
+        { "path": "../murmur3" },
     ]
 }
