--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "url": "https://github.com/esfx/esfx/issues"
   },
   "scripts": {
-    "prepublish": "node scripts/prepublish.js",
-    "lerna-publish": "node scripts/publish.js"
+    "prepublishOnly": "node scripts/prepublish.js"
   },
   "devDependencies": {
     "@types/jest": "^23.3.11",
@@ -18,8 +17,6 @@
     "chalk": "^2.4.2",
     "del": "^3.0.0",
     "gulp": "^4.0.0",
-    "gulp-sourcemaps": "^2.6.4",
-    "gulp-typescript": "^5.0.0",
     "jest": "^23.6.0",
     "lerna": "^3.13.4",
     "prex": "^0.4.5",
