--- a/packages/decorators-stage1-core/tsconfig.json
+++ b/packages/decorators-stage1-core/tsconfig.json
@@ -6,7 +6,7 @@
     },
     "include": ["src/**/*.ts"],
     "references": [
-        { "path": "../internal-guards" },
+        { "path": "../../internal/guards" },
         { "path": "../type-model" },
     ]
 }
