--- a/internal/guards/package.json
+++ b/internal/guards/package.json
@@ -16,5 +16,8 @@
     "publishConfig": {
         "access": "public"
     },
-    "gitHead": "404382c3b617933f0d087fd7d64481860c46f60b"
+    "gitHead": "404382c3b617933f0d087fd7d64481860c46f60b",
+    "dependencies": {
+        "@esfx/type-model": "^1.0.0-pre.2"
+    }
 }
