--- a/packages/async-waitqueue/package.json
+++ b/packages/async-waitqueue/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@esfx/async-waitqueue",
-    "version": "1.0.0-pre.5",
+    "version": "1.0.0-pre.6",
     "description": "Provides 'WaitQueue', an async coordination primitive used to queue and resolve promises.",
     "main": "dist",
     "types": "dist",
@@ -14,11 +14,11 @@
         "url": "https://github.com/esfx/esfx/issues"
     },
     "dependencies": {
-        "tslib": "^1.9.3",
-        "@esfx/internal-guards": "^1.0.0-pre.5",
-        "@esfx/internal-tag": "^1.0.0-pre.5",
-        "@esfx/cancelable": "^1.0.0-pre.5",
-        "@esfx/collections-linkedlist": "^1.0.0-pre.5"
+        "@esfx/cancelable": "^1.0.0-pre.6",
+        "@esfx/collections-linkedlist": "^1.0.0-pre.6",
+        "@esfx/internal-guards": "^1.0.0-pre.6",
+        "@esfx/internal-tag": "^1.0.0-pre.6",
+        "tslib": "^1.9.3"
     },
     "publishConfig": {
         "access": "public"
