--- a/packages/async-mutex/package.json
+++ b/packages/async-mutex/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@esfx/async-mutex",
     "version": "1.0.0-pre.6",
-    "description": "Provides 'Mutex', an async coordination primitive.",
+    "description": "Provides 'AsyncMutex', an async coordination primitive.",
     "main": "index.js",
     "types": "index.d.ts",
     "author": "Ron Buckton (rbuckton@chronicles.org)",
