--- a/packages/async-countdown/package.json
+++ b/packages/async-countdown/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@esfx/async-countdown",
     "version": "1.0.0-pre.7",
-    "description": "Provides 'AutoResetEvent', an async coordination primitive.",
+    "description": "Provides 'AsyncCountdownEvent', an async coordination primitive.",
     "main": "index.js",
     "types": "index.d.ts",
     "author": "Ron Buckton (rbuckton@chronicles.org)",
