--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1551,7 +1551,7 @@
           "hash": "F23SNivhCBpmM/m8LYiwvQ=="
         }
       },
-      "is_incremental": false,
+      "is_incremental": true,
       "version": ""
     }
   ],
@@ -1582,7 +1582,7 @@
           "can_incremental": true,
           "incrementalPhase": "build",
           "total_file_count": 1,
-          "skipped_file_count": 0
+          "skipped_file_count": 1
         }
       }
     },
