--- a/internal/ts-worker/package.json
+++ b/internal/ts-worker/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@esfx/internal-ts-worker",
-    "version": "1.0.0-pre.6",
+    "version": "1.0.0-pre.8",
     "description": "This package provides internal utilities for '@esfx' and is not intended for use in user-code.",
     "private": true,
     "main": "dist",
@@ -15,9 +15,9 @@
         "url": "https://github.com/esfx/esfx/issues"
     },
     "dependencies": {
-        "tslib": "^1.9.3",
+        "source-map-support": "^0.5.12",
         "ts-node": "^8.2.0",
-        "source-map-support": "^0.5.12"
+        "tslib": "^1.9.3"
     },
     "publishConfig": {
         "access": "public"
